@@ -20,6 +20,7 @@ ChangeLog
 [-] * Fix some memory leaks found by cppcheck.
 [-] * Fix unsafe sprintf usage in some modules.
 [!] * Separate SMS daemon out of gammu binary.
+[+] * Added pkgconfig support for gsmsd (SMSD library).
     
 20081219 - 1.22.1
 
